auto_nav/log/build_2024-03-19_11-00-09/auto_nav/stderr.log
  File "/home/johnyeap01/colcon_ws/src/auto_nav/install/auto_nav/lib/python3.8/site-packages/auto_nav/scanner.py", line 26
    print(f'laser range arraY: {laser_range})
                                            ^
SyntaxError: EOL while scanning string literal

